made multiple changes to api to fix issue with patient and bookings
